--- a/app/src/main/res/layout/content_order_table.xml
+++ b/app/src/main/res/layout/content_order_table.xml
@@ -63,12 +63,18 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="예약"/>
-                <androidx.recyclerview.widget.RecyclerView
+                <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/recyclerCall"
-                    tools:listitem="@layout/order_item_call"
-                    />
+                    android:fillViewport="true">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/recyclerCall"
+                        tools:listitem="@layout/order_item_call"
+                        />
+
+                </androidx.core.widget.NestedScrollView>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
