--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/splash_logo" />
 
     <TextView
         android:layout_width="match_parent"
@@ -41,7 +41,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editName"/>
+            android:id="@+id/editName"
+            android:inputType="text"
+            android:imeOptions="actionSearch"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -51,7 +53,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editChartNo"/>
+            android:id="@+id/editChartNo"
+            android:inputType="text"
+            android:imeOptions="actionSearch"/>
     </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:layout_width="wrap_content"
