--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,13 +16,22 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+        <TextView
+            android:layout_marginLeft="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:id="@+id/custInfoText"
+            />
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_main" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,15 +40,15 @@
         android:visibility="invisible"
         app:layout_anchor="@id/viewpager"
         app:layout_anchorGravity="right"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
     <RelativeLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         app:behavior_hideable="true"
         app:behavior_peekHeight="60dp"
-        app:layout_behavior="andcom.nvchart.MyBottomSheetBehavior"
         tools:ignore="MissingPrefix">
 
         <LinearLayout
@@ -155,7 +164,7 @@
                     android:tag="save" />
             </LinearLayout>
         </LinearLayout>
-        <RelativeLayout
+        <!--<RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -214,6 +223,6 @@
             android:background="@color/colorPrimary"
             android:visibility="invisible">
 
-        </FrameLayout>
+        </FrameLayout>-->
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
