--- a/app/src/main/res/layout/order_item_call.xml
+++ b/app/src/main/res/layout/order_item_call.xml
@@ -53,6 +53,21 @@
             android:text="Desc"
             android:id="@+id/desc"
             android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/finishCash"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="수납 금액:"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/cash"/>
+        </LinearLayout>
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
