--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,9 @@
     <color name="state_backgroud">@color/colorSecondarySoft</color>
     <color name="state_card_backgroud">@color/colorSecondary</color>
     <color name="state_card_textcolor">#ffffffff</color>
+
+    <color name="cs_state_0">#0000ff</color>
+    <color name="cs_state_1">#FF3333</color>
+    <color name="cs_state_2">#009900</color>
+
 </resources>
