--- a/app/src/main/res/drawable/background_splash2.xml
+++ b/app/src/main/res/drawable/background_splash2.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 배경 -->
     <item
-        android:drawable="@color/colorPrimary"/>
+        android:drawable="@color/colorPrimarySoft"/>
     <!-- 로고 -->
     <item android:top="0dp" android:left="0dp">
-        <bitmap android:src="@drawable/splash_logo"
+        <bitmap android:src="@drawable/papyrusemr_logo"
             android:gravity="center"/>
     </item>
 
